--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,15 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  meta: ">=1.1.0 <2.0.0"
+  equatable: ^1.0.1
+  flutter_bloc: ^2.1.1
+  # firebase_core: ^0.4.2+1
+  # firebase_auth: ^0.15.0+1
+  # firebase_storage: ^3.0.8
+  # firebase_database: ^3.1.0
+  rxdart: ^0.22.6
+  http: ^0.12.0+2
   flutter:
     sdk: flutter
 
