--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,10 +8,10 @@ target 'Runner' do
   # Pods for Runner
   # add the Firebase pod for Google Analytics
   pod 'Firebase'
-  # pod 'Firebase/Core'
-  # pod 'Firebase/Auth'
+  pod 'Firebase/Core'
+  pod 'Firebase/Auth'
   # pod 'Firebase/Storage'
-  # pod 'Firebase/Database'
+  pod 'Firebase/Database'
 
   # add pods for any other desired Firebase products
   # https://firebase.google.com/docs/ios/setup#available-pods
